<resources>
    <string name="app_name">MoveKos</string>
    <string name="title_activity_home">MainActivity</string>
    <string name="title_home"></string>
    <string name="title_dashboard"></string>
    <string name="title_notifications"></string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_home_">MainActivity</string>
    <string name="title_activity_bottom">MainActivity</string>
    <string name="google_maps_API_key">AIzaSyAQ7FVP_6AWZD1AEC8DX2YEv340-esE6Mo</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="swipe_left_for_register">Swipe Left for Register</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="e_mail">Email</string>
    <string name="tag">Let\'s join us and \nBuild your relationship with others</string>
    <string name="swipe_right_for_login">Swipe Right for Login</string>
    <string name="register">Register</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="your_name">Full Name</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="logout">Logout</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title1">Input Data</string>
    <string name="title2">Complete Payment</string>
    <string name="title3">Keep Calm and Wait</string>
    <string name="description1">Input all the information needed for us to process your order (Pickup Location is only avaible for Depok Only)</string>
    <string name="description2">After we confirm your payment, your order will be procesed immediately</string>
    <string name="description3">Wait your order to come. You can also cek the progress using the given resi number</string>
    <string name="Next">Next</string>
    <string name="Back">Back</string>
    <string name="Done"><Done>Done</Done></string>

</resources>