<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstOrderFragment"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/colorPrimary">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:src="@drawable/firstorderimage" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/title1"
        android:layout_marginTop="40dp"
        android:textSize="42sp"
        android:fontFamily="@font/indigo_daisy"
        android:textColor="@color/colorAccent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description1"
        android:gravity="center"
        android:textColor="#ffffff"
        android:fontFamily="@font/roboto_regular"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/slideOneNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            android:textColor="@color/colorAccent"
            android:layout_gravity="bottom|end"
            android:gravity="bottom|end"
            android:text="@string/Next"
            android:clickable="true"
            android:focusable="true"/>



    </LinearLayout>
</LinearLayout>